--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ a#scrollUp i{
 }
 
 .header-middle .container .row {
-  border-bottom: 1px solid #f5f5f5;
+  border-bottom: 1px solid #e6e6e6;
   margin-left: 0;
   margin-right: 0;
   padding-bottom: 20px;
@@ -654,13 +654,13 @@ ul.sub-menu {
 }
 
 .category-products {
-  border: 1px solid #F7F7F0;
+  border: 1px solid #e6e6e6;
   margin-bottom: 35px;
   padding-bottom: 20px;
   padding-top: 15px;
 }
 .left-sidebar h2, .brands_products h2 {
-  color: #FE980F;
+  color: #ff80ff;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -685,7 +685,7 @@ ul.sub-menu {
 .left-sidebar h2:before{
 	content: " ";
 	position: absolute;
-	background: #fff;
+	background: #e6e6e6;
 	bottom: -6px;
 	width: 130px;
 	height: 30px;
@@ -707,7 +707,7 @@ h2.title:before{
 }
 
 .category-products .panel {
-	background-color: #FFFFFF;
+	background-color: #e6e6e6;
 	border: 0px;
 	border-radius: 0px;
 	box-shadow:none;
@@ -715,7 +715,7 @@ h2.title:before{
 }
 
 .category-products .panel-default .panel-heading {
-  background-color: #FFFFFF;
+  background-color:#e6e6e6;
   border: 0 none;
   color: #FFFFFF;
   padding: 5px 20px;
@@ -761,14 +761,14 @@ h2.title:before{
 }
 
 .brands-name {
-  border: 1px solid #F7F7F0;
+  border: 1px solid #e6e6e6;
   padding-bottom: 20px;
   padding-top: 15px;
 }
 
 
 .brands-name .nav-stacked li a {
-  background-color: #FFFFFF;
+  background-color: #e6e6e6;
   color: #696763;
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
@@ -783,7 +783,7 @@ h2.title:before{
 }
 
 .shipping {
-  background-color: #F2F2F2;
+  background-color: #e6e6e6;
   margin-top: 40px;
   overflow: hidden;
   padding-top: 20px;
@@ -796,8 +796,8 @@ h2.title:before{
 }
 
 .well {
-  background-color: #FFFFFF;
-  border: 1px solid #F7F7F0;
+  background-color: #e6e6e6;
+  border: 1px solid #e6e6e6;
   border-radius: 4px;
   box-shadow: none;
   margin-bottom: 20px;
@@ -835,7 +835,7 @@ h2.title:before{
 
 
 h2.title {
-  color: #FE980F;
+  color: #ff80ff;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -843,6 +843,7 @@ h2.title {
   text-transform: uppercase;
   margin-bottom: 30px;
   position: relative;
+  background: #e6e6e6;
 }
 
 .product-image-wrapper{
@@ -891,7 +892,7 @@ h2.title {
 }
 
 .product-overlay {
-  background:#FE980F;
+  background: #ff80ff;
   top: 0;
   display: none;
   height: 0;
@@ -928,7 +929,7 @@ h2.title {
 
 .product-overlay .add-to-cart:hover {
   background:#fff;
-  color: #FE980F;
+  color: #ff80ff;
 }
 
 
@@ -2530,8 +2531,7 @@ h2.title {
   margin-top: 23px;
   transition: all 0.5s;
   cursor: pointer;
-  height: 40px;
-  
+
 }
 
 .button-getit #getnow {
