--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,14 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,300,400italic,500,700,100);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,600,700);
 @import url(http://fonts.googleapis.com/css?family=Abel);
+.hameid-loader-overlay {
+    width: 100%;
+    height: 100%;
+    background: url("https://www.kalayourlife.com/images/2016/12/05/loading.gif") center no-repeat #FFF;
+    z-index: 99999;
+    position: fixed;
+    background-color: #1a1a1a;
+}
 
 body {
   font-family: 'Roboto', sans-serif;
